--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <header class="l-header">
         <nav class="nav bd-grid">
             <div>
-                <a href="#" class="nav__logo">Sumit</a>
+                <!-- <a href="#" class="nav__logo">Sumit</a> -->
+                <!-- <img src="" -->
+                <img src="assets/img/logo.jpg" alt="" class="logo">
             </div>
 
             <div class="nav__menu" id="nav-menu">
@@ -81,12 +83,12 @@
 
                 <div>
                     <h2 class="about__subtitle">Hello,I am Sumit </h2>
-                    <p class="about__text">currently in my 4th year at Chitkara University, where I am pursuing a
+                    <p class="about__text">Currently I am in  4th year at Chitkara University, where I am pursuing a
                         Bachelor of Technology in Computer Science Engineering. I have a strong foundation in various
                         programming languages and technologies, including Java, JavaScript, and frameworks like React
                         and Node.js. Throughout my academic journey, I have actively engaged in projects and internships
                         that have honed my skills in both front-end and back-end development. I am passionate about
-                        leveraging technology to solve real-world problems and am always eager to take on new
+                        leveraging technology to solve real-world problems and I am always eager to take on new
                         challenges.
 
                     </p>
