--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </h1>
 
                 <a href="#" class="button">Contact</a>
-                <a href="#" class="button" onclick="resuma()">Resuma</a>
+                <a href="#" class="button" onclick="resuma()">Resume</a>
             </div>
 
             <div class="home__social">
